--- a/htdocs/svntrac.css
+++ b/htdocs/svntrac.css
@@ -1,8 +1,3 @@
-body
-{
-  background-color: white;
-}
-
 pre.file-content
 {
   border: thin solid black;
@@ -16,6 +11,9 @@ table.listing
   width: 90%;
   background-color: white;
   border: thin solid lightgray;
+  border: thin solid lightgray;
+  border-right-color: gray;
+  border-bottom-color: gray;
   padding: 0px;
 }
 
@@ -26,7 +24,7 @@ th.header-left
   text-align: left;
   white-space: nowrap;
   border-bottom: thin solid lightgray;
-  font: bold 12px Bitstream Vera Sans, Verdana, Helvetica, sans-serif;
+  font: bold 100% Bitstream Vera Sans, Verdana, Helvetica, sans-serif;
 }
 
 th.header-right
@@ -36,7 +34,7 @@ th.header-right
   text-align: right;
   white-space: nowrap;
   border-bottom: thin solid lightgray;
-  font: bold 12px Bitstream Vera Sans, Verdana, Helvetica, sans-serif;
+  font: bold 100% Bitstream Vera Sans, Verdana, Helvetica, sans-serif;
 }
 
 td.timeline-day
@@ -82,7 +80,7 @@ td.date-column
 
 td.icon-column
 {
-  width: 16px;
+  width: 20px;
 }
 
 td.name-column, td.report-column, td.ticket-column
@@ -172,10 +170,14 @@ td.diff-add-left,td.diff-add-right
   vertical-align: top;
   }
 
+body
+{
+  background-color: white;
+}
 
 body, p, td, div
 {
-  font: normal 12px Bitstream Vera Sans, Verdana, Helvetica, sans-serif;
+  font: normal 100% Bitstream Vera Sans, Verdana, Helvetica, sans-serif;
   color: black;
 } 
 
@@ -203,7 +205,7 @@ a:active { background-color: pink; }
  */
 
 #page-topbar {
-  font: 9px Verdana, Helvetica, sans-serif;
+  font: 80% Verdana, Helvetica, sans-serif;
   color: #999; 
   background-color: #eee;                   
   border: solid 1px #999;
@@ -213,7 +215,7 @@ a:active { background-color: pink; }
 }
 
 a.topbar-link,a.topbar-link-active { 
-  font: 9px Verdana, Helvetica, sans-serif;
+  font: 80% Verdana, Helvetica, sans-serif;
   color: #666; 
   text-decoration: none;
   font-weight: bold; 
@@ -235,14 +237,13 @@ a.topbar-link-active {
   border: solid 1px #300;
   border-width: 1px 0 1px 0;
  
-//  white-space: nowrap;
   padding: 0px 5px;
   margin: 0 0 0 0;
 }
 
 .navbar { 
   color: white;
-  font: 11px Verdana, Helvetica, sans-serif;
+  font: 80% Verdana, Helvetica, sans-serif;
 }
 
 a.navbar-link,a.navbar-link-active {
@@ -268,15 +269,11 @@ a.navbar-link-right
   margin: 0;
 }
 
-a.navbar-link-active { 
+a.navbar-link-active
+{ 
   background-color: #fff;                    
   color: black;
 }
-
-
-
-
-
 
 #page-header
 {
@@ -341,8 +338,9 @@ a.navbar-link-active {
  * Forms 
  */
 
-input, textarea, select { 
-  border: thin solid black;
+input, textarea, select
+{ 
+  border: thin solid lightgray;
 }
 
 input[type="submit"], input[type="reset"]
