--- a/htdocs/trac.css
+++ b/htdocs/trac.css
@@ -18,9 +18,10 @@ a:hover {
 a.noline { border-bottom: none; }
 address { font-style: normal; }
 img { border: none; }
-#browser-rev, #log-hdr,#log-hdr,#timeline-hdr,#chg-hdr {
+#browser-rev, #log-hdr,#log-hdr,#timeline-hdr,#chg-hdr,#report-hdr {
 	font-size: 110%;
 	margin-right: 1em;
+        margin-top: .5em;
 }
 
 /* Forms */
@@ -45,10 +46,17 @@ option {  border-bottom: 1px solid #ccc; }
 	color: #000;
 }
 #header-links, #subheader-links {
-	padding: 0 1em;
+	padding: 2px 0em;
 	text-align: right;
 }
 #subheader-links a,#header-links a { padding: 0 .5em; }
+.subheader-sublinks { 
+ background: #f7f7f7;
+ border: 1px solid #ccc;
+ color: #888;
+ padding: 0 .5em;
+ text-align: left;
+}
 
 /* Footer */
 
@@ -147,14 +155,15 @@ a.wiki-missing-page:hover { color: #000; }
 	padding-bottom: .5em;
 	border-bottom: 1px solid #ccc;
 }
-#browser-list {
+#browser-list,#common-list {
 	clear: both;
 	margin: .5em 0 2em 0;
 	border-bottom: 1px solid #eee;
-	width: 100%;
 	border-collapse: collapse;
 	line-height: 130%;
 }
+#browser-list { width: 100%; }
+
 tr.browser-listhdr { border-bottom: 1px solid #eee; }
 tr.browser-listhdr th {
 	text-align: left;
@@ -167,9 +176,10 @@ tr.browser-listhdr th {
 	background: transparent;
 }
 #browser-list td { padding: 0 .5em; }
-tr.br-row-even, tr.br-row-odd { border-top: 1px solid #ddd; }
-tr.br-row-even { background-color: #fff; }
-tr.br-row-odd { background-color: #f7f7f7; }
+th { text-align: left; }
+tr.br-row-even, tr.br-row-odd,tr.row-even, tr.row-odd { border-top: 1px solid #ddd; }
+tr.br-row-even,tr.row-even { background-color: #fff; }
+tr.br-row-odd,tr.row-odd { background-color: #f7f7f7; }
 tr.br-row-even:hover,tr.br-row-odd:hover { background: #eed; }
 td.br-size-col,td.br-rev-col,td.br-date-col,td.br-summary-col,td.br-chg-col { border-left: 1px solid #eee; }
 td.br-icon-col { }
