--- a/htdocs/trac.css
+++ b/htdocs/trac.css
@@ -18,7 +18,7 @@ a:hover {
 a.noline { border-bottom: none; }
 address { font-style: normal; }
 img { border: none; }
-#browser-rev, #log-hdr,#log-hdr,#timeline-hdr,#chg-hdr,#report-hdr {
+#browser-rev, #log-hdr,#log-hdr,#timeline-hdr,#chg-hdr,#report-hdr,#tkt-hdr {
 	font-size: 110%;
 	margin-right: 1em;
         margin-top: .5em;
@@ -343,3 +343,51 @@ td.diff-line {
 .diff-remove-right { background-color: #ffaaaa; }
 .diff-add-left,.chg-file-add { background-color: #dfd; }
 .diff-add-right, .diff-legend-add { background-color: #cfc; }
+
+/* Ticket */
+
+#tkt-ticket { 
+ background: #ffd;
+ border: 1px solid #dd9;
+ border-width: 1px 2px 2px 1px;
+ padding: .5em;
+ max-width: 700px;
+}
+#tkt-left { 
+ width: 50%;
+ float: left;
+ border-right: 1px solid #dd9;
+ padding: .5em;
+}
+#tkt-right { 
+ padding: .5em;
+}
+#tkt-date { 
+ float: right;
+ font-size: 75%;
+ color: #996; 
+}
+.tkt-prop { 
+  border-bottom: 1px dotted #eed;
+}
+.tkt-label { 
+ color: #996; 
+ font-weight: normal;
+ padding: 0 .5em;
+ float: left;
+ width: 8em;
+}
+.tkt-val { }
+#tkt-summary { 
+ margin: 0;
+ font-size: 100%;
+ border-bottom: 1px solid #dd9;
+ padding-bottom: .25em;
+}
+#tkt-descr { 
+ border-top: 1px solid #dd9;
+ padding-top: .5em;
+}
+#tkt-left,#tkt-right { 
+ font-size: 80%;
+}
