--- a/htdocs/css/trac.css
+++ b/htdocs/css/trac.css
@@ -7,6 +7,7 @@ body {
   font: normal 12px 'Bitstream Vera Sans', Verdana, Helvetica, Arial, sans-serif;
 }
 .hide { display: none; }
+.tiny { font-size: 1px; height: 1px }
 hr { border: none;  border-top: 1px solid #ccc; }
 a:link, a:visited, a.noline,b.tl-item-link {
   text-decoration: none;
