Add grouping option to the query branch.
git-svn-id: https://svn.edgewall.org/repos/trac/branches/cmlenz-dev@1057 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/query/htdocs/css/report.css
+++ b/query/htdocs/css/report.css
@@ -29,47 +29,47 @@ h2 {
 
 /* Styles for the report list and the report results table
    (extends the styles for "table.listing") */
-#reportlist td.title { width: 100% }
-#reportlist tbody td :link, #reportlist tbody td :visited,
-#tktlist tbody td :link, #tktlist tbody td :visited { display: block }
-#tktlist { border-bottom: none }
-#tktlist thead th { text-transform: capitalize }
-#tktlist tbody td, #reportlist tbody td { padding: .1em .5em }
-#tktlist tbody td a, #reportlist tbody td a { border-bottom: none }
-#tktlist tbody td.ticket :link, #tktlist tbody td.ticket :visited {
+.reports td.title { width: 100% }
+.reports tbody td :link, .reports tbody td :visited,
+.tickets tbody td :link, .tickets tbody td :visited { display: block }
+.tickets { border-bottom: none }
+.tickets thead th { text-transform: capitalize }
+.tickets tbody td, .reports tbody td { padding: .1em .5em !important }
+.tickets tbody td a, .reports tbody td a { border-bottom: none }
+.tickets tbody td.ticket :link, .tickets tbody td.ticket :visited {
  font-weight: bold;
 }
-#tktlist tbody tr:hover { background: #eed; color: #000 }
-#tktlist tr.color1-odd  { background: #fdc; border-color: #e88; color: #a22 }
-#tktlist tr.color1-even { background: #fed; border-color: #e99; color: #a22 }
-#tktlist tr.color2-odd  { background: #ffb; border-color: #eea; color: #880 }
-#tktlist tr.color2-even { background: #ffd; border-color: #dd8; color: #880 }
-#tktlist tr.color3-odd  { background: #fbfbfb; border-color: #ddd; color: #444 }
-#tktlist tr.color3-even { background: #f6f6f6; border-color: #ccc; color: #333 }
-#tktlist tr.color4-odd { background: #e7ffff; border-color: #cee; color: #099 }
-#tktlist tr.color4-even { background: #dff; border-color: #bee; color: #099 }
-#tktlist tr.color5-odd { background: #e7eeff; border-color: #cde; color: #469 }
-#tktlist tr.color5-even { background: #dde7ff; border-color: #cde; color: #469 }
-#tktlist tr.color6-odd  { background: #f0f0f0; border-color: #ddd; color: #888 }
-#tktlist tr.color6-even { background: #f7f7f7; border-color: #ddd; color: #888 }
-#tktlist tr.color6-odd a, .color6-even a { color: #b66 }
-#tktlist tbody td.fullrow {
+.tickets tbody tr:hover { background: #eed; color: #000 }
+.tickets tr.color1-odd  { background: #fdc; border-color: #e88; color: #a22 }
+.tickets tr.color1-even { background: #fed; border-color: #e99; color: #a22 }
+.tickets tr.color2-odd  { background: #ffb; border-color: #eea; color: #880 }
+.tickets tr.color2-even { background: #ffd; border-color: #dd8; color: #880 }
+.tickets tr.color3-odd  { background: #fbfbfb; border-color: #ddd; color: #444 }
+.tickets tr.color3-even { background: #f6f6f6; border-color: #ccc; color: #333 }
+.tickets tr.color4-odd { background: #e7ffff; border-color: #cee; color: #099 }
+.tickets tr.color4-even { background: #dff; border-color: #bee; color: #099 }
+.tickets tr.color5-odd { background: #e7eeff; border-color: #cde; color: #469 }
+.tickets tr.color5-even { background: #dde7ff; border-color: #cde; color: #469 }
+.tickets tr.color6-odd  { background: #f0f0f0; border-color: #ddd; color: #888 }
+.tickets tr.color6-even { background: #f7f7f7; border-color: #ddd; color: #888 }
+.tickets tr.color6-odd a, .color6-even a { color: #b66 }
+.tickets tbody td.fullrow {
  border: none;
  color: #333;
  background: transparent;
  padding: 0 1em 2em !important;
  font-size: 90%;
 }
-#tktlist td.fullrow :link, #tktlist td.fullrow :visited { display: inline }
-#tktlist td.fullrow hr { display: none }
+.tickets td.fullrow :link, .tickets td.fullrow :visited { display: inline }
+.tickets td.fullrow hr { display: none }
 
-#tktlist tr.odd.highest { background: #fdc; border-color: #e88; color: #a22 }
-#tktlist tr.even.highest { background: #fed; border-color: #e99; color: #a22 }
-#tktlist tr.odd.high { background: #ffb; border-color: #eea; color: #880 }
-#tktlist tr.even.high { background: #ffd; border-color: #dd8; color: #880 }
-#tktlist tr.odd.normal  { background: #fbfbfb; border-color: #ddd; color: #444 }
-#tktlist tr.even.normal { background: #f6f6f6; border-color: #ccc; color: #333 }
-#tktlist tr.odd.low { background: #e7ffff; border-color: #cee; color: #099 }
-#tktlist tr.even.low { background: #dff; border-color: #bee; color: #099 }
-#tktlist tr.odd.lowest { background: #e7eeff; border-color: #cde; color: #469 }
-#tktlist tr.even.lowest { background: #dde7ff; border-color: #cde; color: #469 }
+.tickets tr.odd.highest { background: #fdc; border-color: #e88; color: #a22 }
+.tickets tr.even.highest { background: #fed; border-color: #e99; color: #a22 }
+.tickets tr.odd.high { background: #ffb; border-color: #eea; color: #880 }
+.tickets tr.even.high { background: #ffd; border-color: #dd8; color: #880 }
+.tickets tr.odd.normal  { background: #fbfbfb; border-color: #ddd; color: #444 }
+.tickets tr.even.normal { background: #f6f6f6; border-color: #ccc; color: #333 }
+.tickets tr.odd.low { background: #e7ffff; border-color: #cee; color: #099 }
+.tickets tr.even.low { background: #dff; border-color: #bee; color: #099 }
+.tickets tr.odd.lowest { background: #e7eeff; border-color: #cde; color: #469 }
+.tickets tr.even.lowest { background: #dde7ff; border-color: #cde; color: #469 }
