First iteration of TracDiff. Corresponds to [http://projects.edgewall.com/trac/attachment/ticket/199/diff_module_beta1.diff diff_module_beta1.diff]
git-svn-id: https://svn.edgewall.org/repos/trac/branches/cboos-dev@1761 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/anydiff-branch/htdocs/css/browser.css
+++ b/anydiff-branch/htdocs/css/browser.css
@@ -45,6 +45,32 @@ h1 .sep { color: #666; padding: 0 .1em }
 #dirlist td.name a, #dirlist td.rev a { border-bottom: none; display: block }
 #dirlist td.change * { font-size: 9px }
 
+/* Log */
+tr.diff input { 
+ padding: 0 1em 0 1em;
+ margin: 0; 
+}
+
+#anydiff {
+ background: #f7f7f0;
+ border: 1px outset #998;
+ margin: 0 1em 1em;
+ padding: .8em;
+ float: left;
+}
+#anydiff em {
+ background: #fbfbfb;
+}
+#anydiff form, #anydiff div {
+ vertical-align: top;
+ display: inline;
+ margin-right: 0;
+ margin-left: 0;
+}
+#anydiff input { 
+ vertical-align: baseline;
+}
+
 /* Styles for the revision log table
    (extends the styles for "table.listing") */
 #chglist { margin-top: 0 }
