Small fixes for TracDiff (reverting to a simpler title for the Diff module, fix the diff for single files, CSS fixes for IE...)
git-svn-id: https://svn.edgewall.org/repos/trac/branches/cboos-dev@1770 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/anydiff-branch/htdocs/css/browser.css
+++ b/anydiff-branch/htdocs/css/browser.css
@@ -56,18 +56,14 @@ tr.diff input {
  padding: .8em;
  float: left;
 }
-#anydiff em {
- background: #fbfbfb;
-}
 #anydiff form, #anydiff div {
- vertical-align: top;
  display: inline;
- margin-right: 0;
- margin-left: 0;
 }
 #anydiff input { 
  vertical-align: baseline;
+ margin: 0 -0.5em 0 1em;
 }
+
 
 /* Styles for the revision log table
    (extends the styles for "table.listing") */
