TracDiff: reworked the web UI for the generalized diff
The session is not used anymore. Instead, the browser module keeps track
of the selected base for diff, when one selects a directory entry 
(subdirectory or file) and when one selects a different revision.

Also in this changeset:
 * anydiff.cs: that file has been merged in browser.cs
 * Browser.py: In the Revision Log, it is now possible to diff 
   between revisions corresponding to different paths 
   (which happens after move and rename operations).


git-svn-id: https://svn.edgewall.org/repos/trac/branches/cboos-dev@1792 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/anydiff-branch/htdocs/css/browser.css
+++ b/anydiff-branch/htdocs/css/browser.css
@@ -53,10 +53,10 @@ tr.diff input {
 
 #anydiff {
  margin: 0 1em 1em;
- padding: .8em;
+ padding: .2m;
  float: left;
 }
-#anydiff form, #anydiff div {
+#anydiff form, #anydiff div, #anydiff h3 {
  display: inline;
 }
 #anydiff input { 
