TracDiff: make really obvious that the browser is used to select the target for diff once the base for diff has been selected.
git-svn-id: https://svn.edgewall.org/repos/trac/branches/cboos-dev@1830 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/anydiff-branch/htdocs/css/browser.css
+++ b/anydiff-branch/htdocs/css/browser.css
@@ -52,11 +52,10 @@ tr.diff input {
 }
 
 #anydiff {
- margin: 0 1em 1em;
- padding: .2m;
+ margin: 0 0 1em;
  float: left;
 }
-#anydiff form, #anydiff div, #anydiff h3 {
+#anydiff form, #anydiff div, #anydiff h2 {
  display: inline;
 }
 #anydiff input { 
