TracDiff: merged with latest trunk: {{{svn merge -r1800:1853 http://svn.edgewall.com/repos/trac/trunk .}}}
git-svn-id: https://svn.edgewall.org/repos/trac/branches/cboos-dev@1854 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/anydiff-branch/htdocs/css/trac.css
+++ b/anydiff-branch/htdocs/css/trac.css
@@ -73,12 +73,15 @@ label.disabled { color: #d7d7d7 }
 
 /* Header */
 #header hr { display: none }
+#header h1 { margin: 1.5em 0 -1.5em; }
 #header img { border: none; margin: 0 0 -3em }
 #header :link, #header :visited, #header :link:hover, #header :visited:hover {
  background: transparent;
+ color: #555;
  margin-bottom: 2px;
  border: none;
 }
+#header h1 :link:hover, #header h1 :visited:hover { color: #000 }
 
 /* Quick search */
 #search {
@@ -268,8 +271,8 @@ table.wiki td { border: 1px solid #ccc;  padding: .1em .25em; }
 .wikitoolbar {
  border: solid #d7d7d7;
  border-width: 1px 1px 1px 0;
- float: left;
  height: 18px;
+ width: 156px;
 }
 .wikitoolbar :link, .wikitoolbar :visited {
  background: transparent url(../edit_toolbar.png) no-repeat;
