--- a/blame/htdocs/css/code.css
+++ b/blame/htdocs/css/code.css
@@ -32,10 +32,13 @@ table.code-block tbody th {
 }
 table.code-block tbody td {
  background: #fff;
- font: normal 11px monospace;
- overflow: hidden;
+ font-size: 11px;
  padding: 1px 2px;
  vertical-align: top;
+}
+table.code-block tbody td.code {
+ font: normal 11px monospace;
+ overflow: hidden;
 }
 
 div.code-block {
