Trac web-admin plugin:  * If {{{restrict_owner}}} option is set, display a drop-down menu for the component owner.  * Allow changing the default component/version.
git-svn-id: https://svn.edgewall.org/repos/trac/branches/jonas-dev@1988 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/webadmin/webadmin/htdocs/css/admin.css
+++ b/webadmin/webadmin/htdocs/css/admin.css
@@ -21,4 +21,4 @@
 form.addnew { float: right; margin-top: -2em; width: 30% }
 form.mod { margin-top: 1em; }
 table.listing { clear: none; width: 60% }
-th.sel { width: 1%; }
+table.listing .sel, table.listing .default { text-align: center; width: 1% }
