TracDiff: merged with trunk, upto 0.9b1 (log:trunk#2145:2197)
git-svn-id: https://svn.edgewall.org/repos/trac/branches/cboos-dev@2205 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/anydiff-branch/htdocs/css/browser.css
+++ b/anydiff-branch/htdocs/css/browser.css
@@ -74,8 +74,9 @@ div.buttons {
 #chglist td.change { 
  white-space: nowrap; 
 }
-#chglist td.change div { 
+#chglist td.change span { 
  border: 1px solid #999;
+ display: block;
  margin: .2em .5em 0 0;
  width: .8em; height: .8em;
 }
