TracCrossReferences: homogeneize the display of cross-reference contexts
git-svn-id: https://svn.edgewall.org/repos/trac/branches/cboos-dev@2368 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/xref-branch/htdocs/css/trac.css
+++ b/xref-branch/htdocs/css/trac.css
@@ -21,6 +21,7 @@ address { font-style: normal }
 img { border: none }
 
 .relation { text-decoration: underline }
+.xrefcontext { float: right; font-style: italic; display: inline }
 .underline { text-decoration: underline }
 ol.loweralpha { list-style-type: lower-alpha }
 ol.upperalpha { list-style-type: upper-alpha }
