vc-refactoring: Add the possibility to select branches and tags from the browser interface.
git-svn-id: https://svn.edgewall.org/repos/trac/branches/cboos-dev@2467 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/vc-refactoring/htdocs/css/browser.css
+++ b/vc-refactoring/htdocs/css/browser.css
@@ -2,7 +2,9 @@
 * html #prefs { width: 34em } /* Set width only for IE */
 #prefs fieldset label { display: block }
 #prefs .buttons { margin-top: -1.6em }
+#prefs .button { margin-left: 1.6em }
 #prefs .choice { margin-top: -0.6em }
+#prefs .rev { align: right }
 
 #legend { clear: right; }
 
